[tool.poetry]
name = "aith-backend"
version = "0.1.0"
description = ""
authors = ["Nikita.Zinovich <nikita.zinovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
